# neural-network

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  perceptron.cpp  perceptron.h
src/math/: functions.cpp  functions.h  matrix.cpp  matrix.h
